...
      ),
      body: SingleChildScrollView(
        child: Column(
          crossAxisAlignment: CrossAxisAlignment.start,
          children: [
            InkWell(
              key: const Key('popular_image'),
             onTap: (){
               Navigator.push(
                 context,
                 MaterialPageRoute(
                   builder: (_) => ImageViewerFromUrlScreen(
                     imageUrl:"https://image.tmdb.org/t/p/w500/${widget.popular.profilePath}",
...
