...
                colorText: Colors.white,
              );
            }
          },
          builder: (context, state) {
            return FloatingActionButton(
              key: const Key("download_button"),
              onPressed: homeCubit.downloading
                  ? null
                  : () {
                      homeCubit.saveImage(widget.imageUrl);
                    },
              tooltip: 'Save Image',
...
